--- a/index.html
+++ b/index.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
-    <script src="js/scripts.js">
+    <title>Calculator</title>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.1.1.js"></script>
+    <script src="js/scripts.js"></script>
   </head>
   <body>
-
+    <div class="container">
+    <h1>Calculator</h1>
+    <form id="add">
+      <div class="form-group">
+        <label for="add1">1st number:</label>
+        <input id="add1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="add2">2nd number:</label>
+        <input id="add2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn">Add</button>
+    </form>
+    <div id="output">
+      <form id="subtract">
+        <div class="form-group">
+          <label for="sub1">1st number:</label>
+          <input id="sub1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="sub2">2nd number:</label>
+          <input id="sub2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Subtract</button>
+      </form>
+      <div id="output">
+      </div>
+    </div>
+    <form id="multiply">
+      <div class="form-group">
+        <label for="mutliply1">1st number:</label>
+        <input id="multiply1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="multiply2">2nd number:</label>
+        <input id="multiply2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn">Multiply</button>
+    </form>
+    <div id="output">
+    </div>
+    <form id="divide">
+      <div class="form-group">
+        <label for="divide1">1st number:</label>
+        <input id="divide1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="divide2">2nd number:</label>
+        <input id="divide2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn">Divide</button>
+    </form>
+    <div id="output">
+    </div>
+    </div>
   </body>
 </html>
